# ferguson-patch-visualiser

./: .gitignore  CMakeLists.txt  README.md  ferguson_canvas.cpp  ferguson_canvas.hpp  ferguson_control.cpp  ferguson_control.hpp  ferguson_patch.cpp  ferguson_patch.hpp  hermite_curve.cpp  hermite_curve.hpp  inner_point_control.cpp  inner_point_control.hpp  main.cpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
include/: canvas.hpp  drawing.hpp  ferguson_canvas.hpp  ferguson_control.hpp  ferguson_patch.hpp  hermite_curve.hpp  inner_point_control.hpp  renderer.hpp  window.hpp
shaders/: ferguson.fs  ferguson.vs
src/: ferguson_canvas.cpp  ferguson_control.cpp  ferguson_patch.cpp  hermite_curve.cpp  inner_point_control.cpp  main.cpp  renderer.cpp  window.cpp
